--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,6 +13,7 @@ concurrency:
 jobs:
   publish-website:
     name: Publish Website
+    if: ${{ secrets.CLOUDFLARE_API_TOKEN != '' && secrets.CLOUDFLARE_ACCOUNT_ID != '' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
