--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tako.sh",
-  "version": "0.1.0",
+  "version": "0.0.1-alpha.0",
   "description": "Official SDK for the Tako application platform",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
