--- a/tako-core/Cargo.toml
+++ b/tako-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tako-core"
 description = "Core protocol types for the Tako application platform"
-version.workspace = true
+version = "0.0.1-alpha.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
