--- a/tako-dev-server/Cargo.toml
+++ b/tako-dev-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tako-dev-server"
-version.workspace = true
+version = "0.0.1-alpha.0"
 edition.workspace = true
 authors.workspace = true
 description = "Local development server for the Tako application platform"
@@ -12,7 +12,7 @@ name = "tako-dev-server"
 path = "src/main.rs"
 
 [dependencies]
-tako-socket = { path = "../tako-socket" }
+tako-socket = { path = "../tako-socket", version = "0.0.1-alpha.0" }
 tokio = { version = "1.49", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
