--- a/tako-server/Cargo.toml
+++ b/tako-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tako-server"
-version.workspace = true
+version = "0.0.1-alpha.0"
 edition.workspace = true
 authors.workspace = true
 description = "Official server runtime and proxy for the Tako application platform"
@@ -14,8 +14,8 @@ name = "tako-server"
 path = "src/main.rs"
 
 [dependencies]
-tako-core = { path = "../tako-core" }
-tako-socket = { path = "../tako-socket" }
+tako-core = { path = "../tako-core", version = "0.0.1-alpha.0" }
+tako-socket = { path = "../tako-socket", version = "0.0.1-alpha.0" }
 clap = { version = "4.5", features = ["derive", "env"] }
 tokio = { version = "1.49", features = ["full", "signal"] }
 tracing = "0.1"
