--- a/website/wrangler.jsonc
+++ b/website/wrangler.jsonc
@@ -1,15 +1,15 @@
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
+  "$schema": "node_modules/wrangler/config-schema.json",
   "name": "tako-website",
   "compatibility_date": "2026-01-29",
   "workers_dev": false,
   "routes": [
     {
       "pattern": "tako.sh",
-      "custom_domain": true
-    }
+      "custom_domain": true,
+    },
   ],
   "assets": {
-    "directory": "./dist"
-  }
+    "directory": "./dist",
+  },
 }
