--- a/sdk/package.json
+++ b/sdk/package.json
@@ -2,28 +2,47 @@
   "name": "tako.sh",
   "version": "0.0.1-alpha.0",
   "description": "Official SDK for the Tako application platform",
+  "keywords": [
+    "bun",
+    "deno",
+    "deployment",
+    "node",
+    "serverless",
+    "tako",
+    "tako.sh"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lilienblum/tako.git",
+    "directory": "sdk"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./bun": {
+      "types": "./dist/bun.d.ts",
       "import": "./dist/bun.mjs",
-      "require": "./dist/bun.js",
-      "types": "./dist/bun.d.ts"
+      "require": "./dist/bun.js"
     },
     "./node": {
+      "types": "./dist/node.d.ts",
       "import": "./dist/node.mjs",
-      "require": "./dist/node.js",
-      "types": "./dist/node.d.ts"
+      "require": "./dist/node.js"
     },
     "./deno": {
-      "import": "./dist/deno.mjs",
-      "types": "./dist/deno.d.ts"
+      "types": "./dist/deno.d.ts",
+      "import": "./dist/deno.mjs"
     }
   },
   "scripts": {
@@ -32,25 +51,6 @@
     "build:adapters": "bun build ./src/adapters/bun.ts ./src/adapters/node.ts ./src/adapters/deno.ts --outdir ./dist --target bun",
     "typecheck": "tsc --noEmit",
     "test": "bun test"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "keywords": [
-    "tako",
-    "tako.sh",
-    "deployment",
-    "serverless",
-    "bun",
-    "node",
-    "deno"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lilienblum/tako.git",
-    "directory": "sdk"
   },
   "devDependencies": {
     "@types/bun": "catalog:dev",
