feat(repo): enforce explicit routes and revamp status reporting

--- a/examples/js/bun/package.json
+++ b/examples/js/bun/package.json
@@ -2,6 +2,9 @@
   "name": "bun-example",
   "private": true,
   "type": "module",
+  "scripts": {
+    "dev": "bun run index.ts"
+  },
   "dependencies": {
     "tako.sh": "workspace:*"
   }
