chore(repo): consolidate docs into website and refresh docs UX

--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,8 @@
     "test": "bun test"
   },
   "dependencies": {
-    "astro": "catalog:dev"
+    "astro": "catalog:dev",
+    "lucide-astro": "^0.556.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:dev",
