feat(repo): complete artifact deploy flow and sdk vite plugin

--- a/examples/js/tanstack-start/package.json
+++ b/examples/js/tanstack-start/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-e2e",
+  "name": "tanstack-start-example-basic",
   "private": true,
   "type": "module",
   "sideEffects": false,
