--- a/sdk/package.json
+++ b/sdk/package.json
@@ -43,12 +43,18 @@
     "./deno": {
       "types": "./dist/deno.d.ts",
       "import": "./dist/deno.mjs"
+    },
+    "./vite": {
+      "types": "./src/vite.ts",
+      "import": "./dist/vite.js",
+      "require": "./dist/vite.js"
     }
   },
   "scripts": {
-    "build": "bun run build:index && bun run build:adapters",
+    "build": "bun run build:index && bun run build:adapters && bun run build:vite",
     "build:index": "bun build ./src/index.ts --outdir ./dist --target bun",
     "build:adapters": "bun build ./src/adapters/bun.ts ./src/adapters/node.ts ./src/adapters/deno.ts --outdir ./dist --target bun",
+    "build:vite": "bun build ./src/vite.ts --outdir ./dist --target node",
     "typecheck": "tsc --noEmit",
     "test": "bun test"
   },
