fix(website): stop rebuilding during wrangler deploy

--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "deploy": "astro build && wrangler deploy",
+    "deploy": "wrangler deploy",
     "test": "bun test"
   },
   "dependencies": {
