--- a/examples/js/tanstack-start/package.json
+++ b/examples/js/tanstack-start/package.json
@@ -3,33 +3,28 @@
   "private": true,
   "type": "module",
   "sideEffects": false,
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
     "preview": "vite preview",
-    "start": "node .output/server/index.mjs"
+    "start": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.159.10",
-    "@tanstack/react-router-devtools": "^1.159.10",
-    "@tanstack/react-start": "^1.159.12",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tako.sh": "workspace:*",
-    "zod": "^3.24.2"
+    "@tanstack/react-router": "catalog:web",
+    "@tanstack/react-start": "catalog:web",
+    "react": "catalog:web",
+    "react-dom": "catalog:web",
+    "tako.sh": "workspace:*"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/node": "^22.5.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.6.0",
-    "nitro": "3.0.1-alpha.2",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.7.2",
-    "vite": "^7.3.1",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@tailwindcss/vite": "catalog:web",
+    "@types/node": "catalog:dev",
+    "@types/react": "catalog:web",
+    "@types/react-dom": "catalog:web",
+    "@vitejs/plugin-react": "catalog:web",
+    "tailwindcss": "catalog:web",
+    "typescript": "catalog:dev",
+    "vite": "catalog:web"
   }
 }
