--- a/examples/js/tanstack-start/tako.toml
+++ b/examples/js/tanstack-start/tako.toml
@@ -1,5 +1,5 @@
+dist = "dist"
+assets = ["public", "dist/client"]
+
 [envs.production]
 route = "tanstack-start-example.orb.local"
-
-[servers.tako-server]
-env = "production"
