--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
       "sdk",
       "website",
       "examples/js/*",
-      "e2e/js/*"
+      "e2e/fixtures/js/*"
     ],
     "catalogs": {
       "dev": {
@@ -15,6 +15,18 @@
         "astro": "^5.17.2",
         "wrangler": "^4.65.0",
         "typescript": "^5"
+      },
+      "web": {
+        "@tailwindcss/vite": "^4.1.18",
+        "@tanstack/react-router": "^1.159.10",
+        "@tanstack/react-start": "^1.159.12",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@vitejs/plugin-react": "^4.6.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.1.18",
+        "vite": "^7.3.1"
       }
     }
   },
