chore(repo): simplify examples and e2e fixtures

--- a/e2e/fixtures/js/tanstack-start/tako.toml
+++ b/e2e/fixtures/js/tanstack-start/tako.toml
@@ -1,8 +1,5 @@
 dist = "dist"
-assets = ["public", "dist/client"]
+assets = ["dist/client"]
 
 [envs.production]
 route = "tanstack-start-e2e.example.com"
-
-[servers.ssh]
-env = "production"
