feat(deploy): resolve entry from main and drop dist metadata flow

--- a/e2e/fixtures/js/tanstack-start/package.json
+++ b/e2e/fixtures/js/tanstack-start/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "sideEffects": false,
-  "main": "src/server.ts",
+  "main": "dist/server/tako-entry.mjs",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
