--- a/sdk/package.json
+++ b/sdk/package.json
@@ -21,6 +21,7 @@
     "dist",
     "src"
   ],
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
