--- a/examples/js/bun/package.json
+++ b/examples/js/bun/package.json
@@ -2,6 +2,7 @@
   "name": "bun-example",
   "private": true,
   "type": "module",
+  "main": "index.ts",
   "scripts": {
     "dev": "bun run index.ts"
   },
