--- a/examples/js/bun/tako.toml
+++ b/examples/js/bun/tako.toml
@@ -1,2 +1,5 @@
 [envs.production]
-route = "tako-bun-server.orb.local"
+route = "tako-bun-server.orb.local/bun"
+
+[servers.tako-server]
+env = "production"
