--- a/presets/bun-tanstack-start.toml
+++ b/presets/bun-tanstack-start.toml
@@ -1,22 +1,28 @@
 main = "dist/server/tako-entry.mjs"
 dev = ["bun", "run", "dev"]
-install = "bun install --production --frozen-lockfile"
-start = ["bun", "run", "node_modules/tako.sh/src/wrapper.ts", "{main}"]
+install = '''
+proto install --yes
+if [ -f bun.lockb ] || [ -f bun.lock ]; then
+  proto run bun -- install --production --frozen-lockfile
+else
+  proto run bun -- install --production
+fi
+'''
+start = ["proto", "run", "bun", "--", "run", "node_modules/tako.sh/src/wrapper.ts", "{main}"]
 assets = ["dist/client"]
 
 [build]
 exclude = ["node_modules/"]
 install = '''
+proto install --yes
 if [ -f bun.lockb ] || [ -f bun.lock ]; then
-  bun install --frozen-lockfile
+  proto run bun -- install --frozen-lockfile
 else
-  bun install
+  proto run bun -- install
 fi
 '''
 build = '''
 cd "$TAKO_APP_DIR"
-bun run --if-present build
+proto run bun -- run --if-present build
 '''
-
-[build.targets]
-builder_image = "oven/bun:1.3"
+targets = ["linux-x86_64-glibc", "linux-aarch64-glibc", "linux-x86_64-musl", "linux-aarch64-musl"]
