feat(tako): unify runtime presets and add preset reference docs

--- a/e2e/fixtures/js/tanstack-start/tako.toml
+++ b/e2e/fixtures/js/tanstack-start/tako.toml
@@ -1,6 +1,5 @@
-[build]
-adapter = "bun"
-preset = "bun-tanstack-start"
+runtime = "bun"
+preset = "bun/tanstack-start"
 
 [envs.production]
 route = "tanstack-start-e2e.example.com"
