--- a/examples/js/tanstack-start/tako.toml
+++ b/examples/js/tanstack-start/tako.toml
@@ -1,6 +1,5 @@
-[build]
-adapter = "bun"
-preset = "bun-tanstack-start"
+runtime = "bun"
+preset = "bun/tanstack-start"
 
 [envs.production]
 route = "tako-bun-server.orb.local/tanstack-start"
