feat(tako): enforce runtime-local presets without legacy aliases

--- a/examples/js/tanstack-start/tako.toml
+++ b/examples/js/tanstack-start/tako.toml
@@ -1,5 +1,5 @@
 runtime = "bun"
-preset = "bun/tanstack-start"
+preset = "tanstack-start"
 
 [envs.production]
 route = "tako-bun-server.orb.local/tanstack-start"
