--- a/e2e/fixtures/js/tanstack-start/tako.toml
+++ b/e2e/fixtures/js/tanstack-start/tako.toml
@@ -1,5 +1,5 @@
 runtime = "bun"
-preset = "bun/tanstack-start"
+preset = "tanstack-start"
 
 [envs.production]
 route = "tanstack-start-e2e.example.com"
