fix(tako): inline server target config in server entries

--- a/examples/js/tanstack-start/tako.toml
+++ b/examples/js/tanstack-start/tako.toml
@@ -2,7 +2,7 @@ runtime = "bun"
 preset = "tanstack-start"
 
 [envs.production]
-route = "tako-bun-server.orb.local/tanstack-start"
+route = "tako-testbed.orb.local/tanstack-start"
 
-[servers.tako-server]
+[servers.testbed]
 env = "production"
