--- a/examples/js/bun/tako.toml
+++ b/examples/js/bun/tako.toml
@@ -1,8 +1,7 @@
 runtime = "bun"
-main = "index.ts"
 
 [envs.production]
-route = "tako-bun-server.orb.local/bun"
+route = "tako-testbed.orb.local/bun"
 
-[servers.tako-server]
+[servers.testbed]
 env = "production"
