fix(routing): normalize exact path trailing slashes

--- a/examples/js/tanstack-start/tako.toml
+++ b/examples/js/tanstack-start/tako.toml
@@ -2,7 +2,7 @@ runtime = "bun"
 preset = "tanstack-start"
 
 [envs.production]
-route = "tako-testbed.orb.local/tanstack-start"
+route = "tako-testbed.orb.local/tanstack-start/*"
 
 [servers.testbed]
 env = "production"
