chore(repo): refresh js fixtures and dependency catalogs

--- a/examples/js/tanstack-start/package.json
+++ b/examples/js/tanstack-start/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "tanstack-start-example",
   "private": true,
   "type": "module",
   "sideEffects": false,
